feat: endpoint to search miners by address
